add broken servcice

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -6,6 +6,10 @@
         <div class="col">
             <h1 class="mt-5" style="font-family: 'Arial', sans-serif; font-size: 2.5rem; color: #333; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">Test Microservices</h1>
             <hr style="border: none; border-top: 2px solid #ccc; margin: 2rem auto; max-width: 50%;">
+
+            <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
+            <a id="brokerBtnPing" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker Ping-Pong</a>
+
             <div id="output" class="mt-5" style="border: 1px solid #ccc; padding: 2em; background-color: #f7f7f7;">
                 <span class="text-muted" style="font-style: italic;">Output shows here...</span>
             </div>
@@ -30,6 +34,54 @@
 
 {{define "js"}}
 <script>
+    let brokerBtn = document.getElementById("brokerBtn");
+    let brokerBtnPing = document.getElementById("brokerBtnPing");
+    let output = document.getElementById("output");
+    let sent = document.getElementById("payload");
+    let received = document.getElementById("received");
+
+    brokerBtn.addEventListener("click", function(){ 
+        const body = {
+            method: 'POST',
+        }
+
+        fetch("http://localhost:8080", body)
+            .then((response) => response.json())
+            .then((data) => {
+                sent.innerHTML = "Empty post request";
+                received.innerHTML = JSON.stringify(data, undefined, 4);
+                if(data.error) {
+                    console.log(data.message);
+                }else{
+                    output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+                }
+            })
+        .catch((error) => {
+            output.innerHTML += "<br><br>Error: " + error;
+        })
+        
+    });
+
+    brokerBtnPing.addEventListener("click", function(){
+
+
+        fetch("http://localhost:8080/ping", {method: 'GET'})
+            .then((response) => response.json())
+            .then((data) => {
+                sent.innerHTML = "Ping";
+                received.innerHTML = JSON.stringify(data, undefined, 4);
+                if(data.error) {
+                    console.log(data.message);
+                }else{
+                    output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+                }
+            })
+        .catch((error) => {
+            output.innerHTML += "<br><br>Error: " + error;
+        });
+    });
+
 
 </script>
+
 {{end}}
