--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -7,9 +7,13 @@
             <h1 class="mt-5" style="font-family: 'Arial', sans-serif; font-size: 2.5rem; color: #333; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">Test Microservices</h1>
             <hr style="border: none; border-top: 2px solid #ccc; margin: 2rem auto; max-width: 50%;">
 
-            <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
-            <a id="brokerBtnPing" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker Ping-Pong</a>
+            <div class="d-grid gap-2 col-2 mx-0">
 
+            <a id="brokerBtn" class="btn btn-secondary" href="javascript:void(0);">Test Broker</a>
+            <a id="brokerBtnPing" class="btn btn-secondary" href="javascript:void(0);">Ping</a>
+            
+            </div>
+            
             <div id="output" class="mt-5" style="border: 1px solid #ccc; padding: 2em; background-color: #f7f7f7;">
                 <span class="text-muted" style="font-style: italic;">Output shows here...</span>
             </div>
