--- a/front-end/src/web/templates/test.page.gohtml
+++ b/front-end/src/web/templates/test.page.gohtml
@@ -7,12 +7,25 @@
             <h1 class="mt-5" style="font-family: 'Arial', sans-serif; font-size: 2.5rem; color: #333; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">Test Microservices</h1>
             <hr style="border: none; border-top: 2px solid #ccc; margin: 2rem auto; max-width: 50%;">
 
-            <div class="d-grid gap-2 col-2 mx-0">
 
-            <a id="brokerBtn" class="btn btn-secondary" href="javascript:void(0);">Test Broker</a>
-            <a id="brokerBtnPing" class="btn btn-secondary" href="javascript:void(0);">Ping</a>
-            
-            </div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="d-flex flex-column">
+        <a id="brokerBtn" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Broker</a>
+        <a id="brokerBtnPing" class="btn btn-secondary" href="javascript:void(0);">Ping</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="d-flex flex-column">
+        <a id="authBrokenButton" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Auth</a>
+        <a id="authBrokenButton" class="btn btn-secondary" href="javascript:void(0);">Test Auth</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
             
             <div id="output" class="mt-5" style="border: 1px solid #ccc; padding: 2em; background-color: #f7f7f7;">
                 <span class="text-muted" style="font-style: italic;">Output shows here...</span>
@@ -40,6 +53,9 @@
 <script>
     let brokerBtn = document.getElementById("brokerBtn");
     let brokerBtnPing = document.getElementById("brokerBtnPing");
+
+    let authBrokenButton = document.getElementById("authBrokenButton");
+
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
     let received = document.getElementById("received");
@@ -85,6 +101,43 @@
         });
     });
 
+    authBrokenButton.addEventListener("click", function(){
+        const payload = {
+            action: "auth",
+            auth: {
+                email: "admin@example.com",
+                password: "verysecret",
+            }
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json")
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers,
+        }
+
+        fetch("http://localhost:8080/handle", body)
+            .then((response) => response.json())
+            .then((data) => {
+                sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                received.innerHTML = JSON.stringify(data, undefined, 4);
+                if(data.error) {
+                    output.innerHTML += `
+                    <br><string>Error: </strong> ${data.message}
+                    `;
+
+                    console.log(data.message);
+                }else{
+                    output.innerHTML += `<br><strong>Response from Authentication broker service</strong>: ${data.message}`;
+                }
+            })
+        .catch((error) => {
+            output.innerHTML += "<br><br>Error: " + error;
+        });
+    });
 
 </script>
 
