--- a/front-end/src/web/templates/test.page.gohtml
+++ b/front-end/src/web/templates/test.page.gohtml
@@ -69,7 +69,7 @@
 
     logBtn.addEventListener("click", function() {
         const payload = {
-            action: "log"
+            action: "log",
             log: {
                 name: "event",
                 data: "Some kind of data",
@@ -89,7 +89,7 @@
         fetch("http://localhost:8080/handle", body)
             .then((response) => response.json())
             .then((data) => {
-                sent.innerHTML = "Empty post request";
+                sent.innerHTML = "empty post request";
                 received.innerHTML = JSON.stringify(data, undefined, 4);
                 if(data.error) {
                     console.log(data.message);
