--- a/front-end/src/web/templates/test.page.gohtml
+++ b/front-end/src/web/templates/test.page.gohtml
@@ -8,26 +8,37 @@
             <hr style="border: none; border-top: 2px solid #ccc; margin: 2rem auto; max-width: 50%;">
 
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="d-flex flex-column">
-        <a id="brokerBtn" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Broker</a>
-        <a id="brokerBtnPing" class="btn btn-secondary" href="javascript:void(0);">Ping</a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="d-flex flex-column">
-        <a id="authBrokenButton" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Auth</a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="d-flex flex-column">
-        <a id="logBtn" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Logger</a>
-      </div>
-    </div>
-  </div>
-</div>
+        <div class="container">
+            <div class="row">
+
+                    <div class="d-flex flex-column">
+                    <a id="brokerBtnPing" class="btn btn-secondary mb-2" href="javascript:void(0);">Ping</a>
+                    </div>
+
+                <div class="col">
+    
+                    <div class="d-flex flex-column">
+                        <a id="brokerBtn" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Broker</a>
+                    </div>
+
+                </div>
+                <div class="col">
+
+                    <div class="d-flex flex-column">
+                        <a id="authBrokenButton" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Auth</a>
+                    </div>
+
+                </div>
+                <div class="col">
+
+                    <div class="d-flex flex-column">
+                        <a id="logBtn" class="btn btn-secondary mb-2" href="javascript:void(0);">Test Logger</a>
+                    </div>
+
+                </div>
+                
+            </div>
+        </div>
 
 
             
